fix temp overflow

--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@
 	font-family: '微軟正黑體', 'Arial';
 }
 
+body {
+	width: 100vw;
+	overflow-x: hidden;
+}
 
 header {
 	width: 100vw;
